[project]
name = "trans25"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "colorcet>=3.1.0",
    "folium>=0.20.0",
    "geopy>=2.4.1",
    "gpxpy>=1.6.2",
    "jupyterlab>=4.4.5",
    "matplotlib>=3.10.5",
    "pandas>=2.3.1",
    "scipy>=1.16.1",
]
